# TDCV

homework2/: .gitignore  CMakeLists.txt  README.md
homework2/commons/: feature_extraction.cpp  feature_extraction.h  hog_visualization.cpp  hog_visualization.h
homework2/model/task2/: 0.model  1.model  2.model  3.model  4.model
homework2/model/task3/: 0.model  1.model  10.model  11.model  12.model  13.model  14.model  15.model  16.model  17.model  18.model  19.model  2.model  20.model  21.model  22.model  23.model  24.model  25.model  26.model  27.model  28.model  29.model  3.model  30.model  31.model  32.model  33.model  34.model  35.model  36.model  37.model  38.model  39.model  4.model  40.model  41.model  42.model  43.model  44.model  (+60 more)
homework2/results/: 0000.result.txt  0001.result.txt  0002.result.txt  0003.result.txt  0004.result.txt  0005.result.txt  0006.result.txt  0007.result.txt  0008.result.txt  0009.result.txt  0010.result.txt  0011.result.txt  0012.result.txt  0013.result.txt  0014.result.txt  0015.result.txt  0016.result.txt  0017.result.txt  0018.result.txt  0019.result.txt  0020.result.txt  0021.result.txt  0022.result.txt  0023.result.txt  0024.result.txt  0025.result.txt  0026.result.txt  0027.result.txt  0028.result.txt  0029.result.txt  0030.result.txt  0031.result.txt  0032.result.txt  0033.result.txt  0034.result.txt  0035.result.txt  0036.result.txt  0037.result.txt  0038.result.txt  0039.result.txt  (+4 more)
homework2/task1/: task1.cpp
homework2/task2/: RandomForest.cpp  RandomForest.h  task2.cpp
homework2/task3/: task3.cpp
homework3/: main.py  (+1 more)
(+23 files in other folders)
